@@ -4,21 +4,24 @@ import com.google.protobuf.DynamicMessage;
 import io.ringbroker.core.ring.RingBuffer;
 import io.ringbroker.ledger.orchestrator.LedgerOrchestrator;
 import io.ringbroker.registry.TopicRegistry;
+import lombok.Getter;
 import lombok.Setter;
 
 import javax.annotation.PostConstruct;
 import java.io.IOException;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
 import java.nio.file.Path;
 import java.util.AbstractList;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.concurrent.atomic.AtomicReferenceArray;
 import java.util.concurrent.locks.LockSupport;
 
 /**
  * Allocation‑free, lock‑free ingress (no external libs).
  */
+@Getter
 public final class Ingress {
     private static final int MAX_RETRIES = 5;
     private static final int QUEUE_CAPACITY_FACTOR = 4;   // queue = FACTOR × batchSize
@@ -59,19 +62,14 @@ public final class Ingress {
                                  final RingBuffer<byte[]> ring,
                                  final Path dataDir,
                                  final long segmentSize,
-                                 final int threads,
                                  final int batchSize) throws IOException {
 
-        final ExecutorService exec = Executors.newFixedThreadPool(
-                threads, Thread.ofVirtual().factory());
+        final ExecutorService exec = Executors.newVirtualThreadPerTaskExecutor();
 
         final LedgerOrchestrator mgr = LedgerOrchestrator.bootstrap(dataDir, (int) segmentSize);
         final Ingress ingress = new Ingress(registry, ring, mgr, exec, batchSize);
 
-        /* start writer(s) */
-        for (int i = 0; i < threads; i++) {
-            exec.submit(ingress::writerLoop);
-        }
+        exec.submit(ingress::writerLoop);
         return ingress;
     }
 
@@ -156,53 +154,81 @@ public final class Ingress {
         }
     }
 
+    public void close() throws IOException {
+        this.segments.writable().close();
+    }
+
     /*
      * Allocation‑free bounded lock‑free multi‑producer / multi‑consumer queue
      * (heavily simplified Vyukov algorithm).
      * Only *one* array of references is allocated once in the constructor.
      */
-    private static final class SlotRing {
-        private final int mask;
-        private final AtomicReferenceArray<byte[]> buffer;
-        private final PaddedAtomicLong tail = new PaddedAtomicLong(0); // producers
-        private final PaddedAtomicLong head = new PaddedAtomicLong(0); // consumers
+    static final class SlotRing {
+        private static final VarHandle SEQ, BUF;
 
-        SlotRing(final int capacityPow2) {
-            this.mask = capacityPow2 - 1;
-            this.buffer = new AtomicReferenceArray<>(capacityPow2);
+        static {
+            SEQ = MethodHandles.arrayElementVarHandle(long[].class);
+            BUF = MethodHandles.arrayElementVarHandle(byte[][].class);
         }
 
-        /**
-         * @return false if full
-         */
-        boolean offer(final byte[] e) {
+        private final int mask;
+        private final long[] seq;
+        private final byte[][] buf;
+        private final AtomicLong tail = new AtomicLong();
+        private final AtomicLong head = new AtomicLong();
+
+        SlotRing(int capacityPow2) {
+            mask = capacityPow2 - 1;
+            seq  = new long[capacityPow2];
+            buf  = new byte[capacityPow2][];
+            for (int i = 0; i < capacityPow2; i++) seq[i] = i;
+        }
+
+        boolean offer(byte[] e) {
             long t;
-            for (;;) {
+            while (true) {
                 t = tail.get();
-                if (head.get() <= t - buffer.length()) return false; // full
-                if (tail.compareAndSet(t, t + 1)) break;
+                long idx = t & mask;
+                long s   = (long) SEQ.getVolatile(seq, (int) idx);
+                long dif = s - t;
+                if (dif == 0) {
+                    if (tail.compareAndSet(t, t + 1)) break;
+                } else if (dif < 0) {
+                    return false;              // queue full
+                } else {
+                    Thread.onSpinWait();
+                }
             }
-            final int idx = (int) t & mask;
-            buffer.set(idx, e);   // release‑store – consumer can safely read
+            int i = (int) (t & mask);
+            BUF.setRelease(buf, i, e);         // ① write payload
+            SEQ.setRelease(seq, i, t + 1);     // ② publish slot
             return true;
         }
 
-        /**
-         * @return null if empty
-         */
         byte[] poll() {
             long h;
-            for (;;) {
+            while (true) {
                 h = head.get();
-                if (h >= tail.get()) return null; // empty
-                if (head.compareAndSet(h, h + 1)) break;
+                long idx = h & mask;
+                long s   = (long) SEQ.getVolatile(seq, (int) idx);
+                long dif = s - (h + 1);
+                if (dif == 0) {
+                    if (head.compareAndSet(h, h + 1)) break;
+                } else if (dif < 0) {
+                    return null;               // queue empty
+                } else {
+                    Thread.onSpinWait();
+                }
             }
-            final int idx = (int) h & mask;
-            final byte[] e = buffer.get(idx);      // guaranteed non‑null
-            buffer.lazySet(idx, null);            // clear slot for producers
+            int i = (int) (h & mask);
+            byte[] e = (byte[]) BUF.getAcquire(buf, i);
+            SEQ.setRelease(seq, i, h + mask + 1); // ③ mark slot empty
+            BUF.set(buf, i, null);
             return e;
         }
     }
+
+
 
     /*
      * Cache‑line‑padded AtomicLong to stop false sharing between head & tail.
